--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                     <div class="header">
                         <div class="username">
-                            <span class="text-username">Handra Meizaluna</span><span class="text-discriminator">#777</span>
+                            <span class="text-username">Handra Meizaluna</span><span class="text-discriminator"> #7456</span>
                         </div>
                     </div>
                     <span class="text-base text-status">we are who we meet</span>
@@ -44,24 +44,16 @@
                             <div class="about-section">
                                 <div class="title-body">ABOUT ME</div>
                                 <!-- text-->
-                                <span class="text-base">Hi, my name is Handra, A person who loves to code, design, play games and discover something new. I don't know what you want to know. You can contact me via my email 
-<a href="mailto:jspacee@my.id">jspacee@my.id</a> or Discord!</span>
+                                <span class="text-base">Hi, my name is Handra, A person who loves to code, design, play games and discover something new. You can contact me via my email 
+<a href="mailto:jspacee@my.id">jspacee@my.id</a> or private massage on instagram!</span>
                                 <!-- -->
                             </div>
                             <div class="title-body">ROLES</div>
                             <div class="roles-body">
                                 <!-- roles list -->
-                                <div class="rol pink">
-                                    <i class="fas fa-circle"></i>
-                                    <span>admin of 9domba</span>
-                                </div>
                                 <div class="rol green">
                                     <i class="fas fa-circle"></i>
-                                    <span>alien agency chief</span>
-                                </div>
-                                <div class="rol green">
-                                    <i class="fas fa-circle"></i>
-                                    <span>J-crop chairman</span>
+                                    <span>JEAlienC chairman</span>
                                 </div>
                                 <!-- -->
                             </div>
